removed extra copy of js file

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 			<input type="text" id="input-field" placeholder="What do you need to do?"></input>
 			<button id="add-button">Add to list</button>
 			<div id="items">
-<!-- 				<div class="todo">
-					<div class="checkbox"></div>
-					Sample To-Do Item
-					<span class="delete">X</span>
-				</div> -->
+				<!-- Items go here -->
 			</div>
 			<div id="footer">
 				<span id="num-left">0 items left</span>
@@ -33,7 +29,7 @@
 
 	</div>
 
-	<script src="js/jquery.js"></script>
+	<script src="js/lib/jquery.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
