--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	</div>
 
 	<script src="js/lib/jquery.js"></script>
+	<script src="js/lib/jqueryui.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
